--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,14 @@
         </dependency>
     </dependencies>
 
+    <pluginRepositories>
+         <pluginRepository>
+                <id>maven2-repository.dev.java.net</id>
+                <name>Java.net Repository for Maven</name>
+                <url>http://download.java.net/maven/2/</url>
+                <layout>default</layout>
+        </pluginRepository>
+    </pluginRepositories>
 
     <distributionManagement>
         <repository>
