--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
             <version>0.0.1</version>
         </dependency>
         <dependency>
+            <groupId>com.realcomp.names</groupId>
+            <artifactId>realcomp-names</artifactId>
+            <version>3.1.1-SNAPSHOT</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.0.1</version>
