--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>com.realcomp.names</groupId>
             <artifactId>realcomp-names</artifactId>
-            <version>3.1.1-SNAPSHOT</version>
+            <version>3.1.1</version>
             <optional>true</optional>
         </dependency>
         <dependency>
