--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.realcomp</groupId>
     <artifactId>realcomp-data</artifactId>
     <packaging>jar</packaging>
-    <version>0.1.6-SNAPSHOT</version>
+    <version>0.1.6</version>
     <name>realcomp-data</name>
     <build>
         <plugins>
@@ -145,9 +145,9 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</developerConnection>
-        <url>http://dev.real-comp.com:8060/browse/rcsvn/realcomp-data/trunk</url>
+        <connection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/tags/realcomp-data-0.1.6</connection>
+        <developerConnection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/tags/realcomp-data-0.1.6</developerConnection>
+        <url>http://dev.real-comp.com:8060/browse/rcsvn/realcomp-data/tags/realcomp-data-0.1.6</url>
     </scm>
 
 </project>
