git-svn-id: svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/branches/data-type-operations/realcomp-data@2829 cb9be8fc-bb24-4f4f-8dc9-9fc556ea96d8

--- a/pom.xml
+++ b/pom.xml
@@ -149,5 +149,15 @@
         <developerConnection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</developerConnection>
         <url>http://dev.real-comp.com:8060/browse/rcsvn/realcomp-data/trunk</url>
     </scm>
+    
+    <reporting>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>2.5.1</version>
+        </plugin>
+      </plugins>
+    </reporting>
 
 </project>
