git-svn-id: svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/branches/data-type-operations/realcomp-data@3132 cb9be8fc-bb24-4f4f-8dc9-9fc556ea96d8

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,17 @@
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
             <version>1.3.1</version>
+        </dependency> 
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.4.0</version> <!-- 1.8.5 is latest, but hadoop uses 1.4 (avro) -->
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-xc</artifactId>
+            <version>1.4.0</version><!-- 1.8.5 is latest, but hadoop uses 1.4 (avro) -->
         </dependency>
     </dependencies>
 
