--- a/pom.xml
+++ b/pom.xml
@@ -125,12 +125,12 @@
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.4.5</version>
+            <version>1.7.9</version> <!--hadoop 0.22.0-rc0 is @ 1.7.3 -->
         </dependency>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-xc</artifactId>
-            <version>1.4.5</version>
+            <version>1.7.9</version><!--hadoop 0.22.0-rc0 is @ 1.7.3 -->
         </dependency>
     </dependencies>
 
