git-svn-id: svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/branches/iocontext@3800 cb9be8fc-bb24-4f4f-8dc9-9fc556ea96d8

--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
             <artifactId>jackson-xc</artifactId>
             <version>1.7.9</version><!--hadoop 0.22.0-rc0 is @ 1.7.3 -->
         </dependency>
+        <dependency>
+            <groupId>net.sf.jopt-simple</groupId>
+            <artifactId>jopt-simple</artifactId>
+            <version>4.3</version>
+        </dependency>
     </dependencies>
 
     <pluginRepositories>
