--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.realcomp.data</groupId>
     <artifactId>realcomp-data</artifactId>
     <packaging>jar</packaging>
-    <version>0.3.1-SNAPSHOT</version>
+    <version>0.3.1</version>
     <name>realcomp-data</name>
     <build>
         <plugins>
@@ -161,9 +161,9 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</developerConnection>
-        <url>http://dev.real-comp.com:8060/browse/rcsvn/realcomp-data/trunk</url>
+        <connection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/tags/realcomp-data-0.3.1</connection>
+        <developerConnection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/tags/realcomp-data-0.3.1</developerConnection>
+        <url>http://dev.real-comp.com:8060/browse/rcsvn/realcomp-data/tags/realcomp-data-0.3.1</url>
     </scm>
     
     <reporting>
