updated pom with new fisheye and nexus urls
git-svn-id: svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk@4149 cb9be8fc-bb24-4f4f-8dc9-9fc556ea96d8

--- a/pom.xml
+++ b/pom.xml
@@ -142,18 +142,18 @@
     <distributionManagement>
         <repository>
             <id>nexus</id>
-            <url>http://dev.real-comp.com:8081/nexus/content/repositories/releases</url>
+            <url>http://nexus.real-comp.com/nexus/content/repositories/releases</url>
         </repository>
         <snapshotRepository>
             <id>nexus</id>
-            <url>http://dev.real-comp.com:8081/nexus/content/repositories/snapshots</url>
+            <url>http://nexus.real-comp.com/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
     <scm>
         <connection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</connection>
         <developerConnection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</developerConnection>
-        <url>http://dev.real-comp.com:8060/browse/rcsvn/realcomp-data/trunk</url>
+        <url>http://fisheye.real-comp.com/browse/rcsvn/realcomp-data/trunk</url>
     </scm>
     
     <reporting>
