--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
+                <version>2.5.1</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -40,7 +40,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>2.3</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -142,11 +142,11 @@
     <distributionManagement>
         <repository>
             <id>nexus</id>
-            <url>http://nexus.real-comp.com/nexus/content/repositories/releases</url>
+            <url>http://nexus.real-comp.com:8081/nexus/content/repositories/releases</url>
         </repository>
         <snapshotRepository>
             <id>nexus</id>
-            <url>http://nexus.real-comp.com/nexus/content/repositories/snapshots</url>
+            <url>http://nexus.real-comp.com:8081/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
