--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
@@ -60,16 +60,18 @@
                 </executions>
             </plugin>
         </plugins>
+        <!--
         <pluginManagement>
             <plugins>
-                <!-- for annotation processing -->
+                for annotation processing
                 <plugin>
                     <groupId>org.bsc.maven</groupId>
                     <artifactId>maven-processor-plugin</artifactId>
-                    <version>1.3.7</version>
+                    <version>2.1.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
+         -->
     </build>
     <dependencies>
         <dependency>
@@ -81,23 +83,27 @@
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
-            <version>0.9.5-RC2</version>
+            <version>0.9.8</version>
+            <!--
             <exclusions>
                 <exclusion>
                     <artifactId>logback-classic</artifactId>
                     <groupId>ch.qos.logback</groupId>
                 </exclusion>
             </exclusions>
+            -->
         </dependency>
+        <!--
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.5.6</version>
         </dependency>
+        -->
         <dependency>
             <groupId>com.realcomp</groupId>
             <artifactId>realcomp-data-annotations</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.realcomp.names</groupId>
@@ -108,7 +114,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.0.1</version>
+            <version>2.1</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
@@ -123,7 +129,7 @@
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-            <version>1.4.2</version>
+            <version>1.4.3</version>
         </dependency>
         <dependency>
             <groupId>net.sf.jopt-simple</groupId>
@@ -131,6 +137,7 @@
             <version>4.3</version>
         </dependency>
     </dependencies>
+    <!--
     <pluginRepositories>
         <pluginRepository>
             <id>maven2-repository.dev.java.net</id>
@@ -139,6 +146,7 @@
             <layout>default</layout>
         </pluginRepository>
     </pluginRepositories>
+    -->
     <distributionManagement>
         <repository>
             <id>nexus</id>
