--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>com.realcomp.names</groupId>
             <artifactId>realcomp-names</artifactId>
-            <version>3.2.5</version>
+            <version>4.0.0-SNAPSHOT</version>
             <optional>true</optional>
         </dependency>
         <dependency>
