--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
             <artifactId>realcomp-names</artifactId>
             <version>4.0.0-SNAPSHOT</version>
             <optional>true</optional>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
