--- a/pom.xml
+++ b/pom.xml
@@ -60,18 +60,6 @@
                 </executions>
             </plugin>
         </plugins>
-        <!--
-        <pluginManagement>
-            <plugins>
-                for annotation processing
-                <plugin>
-                    <groupId>org.bsc.maven</groupId>
-                    <artifactId>maven-processor-plugin</artifactId>
-                    <version>2.1.0</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-         -->
     </build>
     <dependencies>
         <dependency>
@@ -83,23 +71,8 @@
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
-            <version>0.9.8</version>
-            <!--
-            <exclusions>
-                <exclusion>
-                    <artifactId>logback-classic</artifactId>
-                    <groupId>ch.qos.logback</groupId>
-                </exclusion>
-            </exclusions>
-            -->
+            <version>0.9.9-RC1</version>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-            <version>1.5.6</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>com.realcomp</groupId>
             <artifactId>realcomp-data-annotations</artifactId>
@@ -115,7 +88,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.1</version>
+            <version>2.4</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
@@ -138,16 +111,6 @@
             <version>4.3</version>
         </dependency>
     </dependencies>
-    <!--
-    <pluginRepositories>
-        <pluginRepository>
-            <id>maven2-repository.dev.java.net</id>
-            <name>Java.net Repository for Maven</name>
-            <url>http://download.java.net/maven/2/</url>
-            <layout>default</layout>
-        </pluginRepository>
-    </pluginRepositories>
-    -->
     <distributionManagement>
         <repository>
             <id>nexus</id>
