--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.realcomp.data</groupId>
     <artifactId>realcomp-data</artifactId>
     <packaging>jar</packaging>
-    <version>0.3.2-SNAPSHOT</version>
+    <version>0.3.2</version>
     <name>realcomp-data</name>
     <build>
         <plugins>
@@ -122,9 +120,9 @@
         </snapshotRepository>
     </distributionManagement>
     <scm>
-        <connection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</developerConnection>
-        <url>http://fisheye.real-comp.com/browse/svn/realcomp-data/trunk</url>
+        <connection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/tags/realcomp-data-0.3.2</connection>
+        <developerConnection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/tags/realcomp-data-0.3.2</developerConnection>
+        <url>http://fisheye.real-comp.com/browse/svn/realcomp-data/tags/realcomp-data-0.3.2</url>
     </scm>
     <reporting>
         <plugins>
