Fixed bug with header record handling.  Doing a reformat to the same schema for in/out was causing problems in the DelimitedFileWriter.
git-svn-id: svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk@8700 cb9be8fc-bb24-4f4f-8dc9-9fc556ea96d8

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.realcomp.data.util.Reformat</mainClass>
+                            <packageName>com.realcomp.data.util</packageName>
+                        </manifest>
+                    </archive>
                 </configuration>
                 <executions>
                     <execution>
@@ -82,7 +88,7 @@
             <version>4.0.0</version>
             <optional>true</optional>
             <type>jar</type>
-        </dependency>     
+        </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
