Changed proper case to alway capitalize mcx names to McX
git-svn-id: svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk@9266 cb9be8fc-bb24-4f4f-8dc9-9fc556ea96d8

--- a/src/main/resources/com/realcomp/data/conversion/ProperCase.properties
+++ b/src/main/resources/com/realcomp/data/conversion/ProperCase.properties
@@ -1,4 +1,8 @@
 Macbride=MacBride
+Macgreggor=MacGreggor
+Macgrady=MacGrady
+Macfadden=MacFadden
+Macfadden=MacFadden
 Po=PO
 Rr=RR
 Cr=CR
@@ -14,9 +18,6 @@ Llc=LLC
 Ltd=LTD
 Lmmc=LMMC
 Rv=RV
-Mcdonald=McDonald
-Mcneil=McNeil
-Mcneal=McNeal
 Etc=ETC
 Aaa=AAA
 Cpa=CPA
