--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.realcomp.data</groupId>
     <artifactId>realcomp-data</artifactId>
     <packaging>jar</packaging>
-    <version>0.3.8</version>
+    <version>0.3.9-SNAPSHOT</version>
     <name>realcomp-data</name>
     <build>
         <plugins>
@@ -126,9 +126,9 @@
         </snapshotRepository>
     </distributionManagement>
     <scm>
-        <connection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/tags/realcomp-data-0.3.8</connection>
-        <developerConnection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/tags/realcomp-data-0.3.8</developerConnection>
-        <url>http://fisheye.real-comp.com/browse/svn/realcomp-data/tags/realcomp-data-0.3.8</url>
+        <connection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://dev.real-comp.com/opt/usr/share/rcsvn/realcomp-data/trunk</developerConnection>
+        <url>http://fisheye.real-comp.com/browse/svn/realcomp-data/trunk</url>
     </scm>
     <reporting>
         <plugins>
