--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.realcomp.data</groupId>
     <artifactId>realcomp-data</artifactId>
     <packaging>jar</packaging>
-    <version>0.4.0</version>
+    <version>0.4.1-SNAPSHOT</version>
     <name>realcomp-data</name>
     <build>
         <plugins>
