removed org.reflections dependency and replaced it with io.github.luckhutch fast-classpath-scanner.  org.reflections was stuck on an old version of Guava and it was causing issues in a Hadoop M/R environment.
Removed the 'match' feature of the field list and un-deprecated the 'classifier' property.  This was a temporary experiment to allow FieldList classification on a regex pattern that didn't have to match the whole record.  I regret that the classifier uses the Matcher.match() method instead of Matcher.find() which would have been more powerful.  Changing this would break backward compatibility (e.g., mvr tx schemas) so not doing this at this time.

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.real-comp</groupId>
@@ -189,7 +190,7 @@
         <dependency>
             <groupId>com.real-comp</groupId>
             <artifactId>prime-annotations</artifactId>
-            <version>0.0.5</version>
+            <version>0.1.0</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -215,6 +216,11 @@
             <groupId>net.sf.jopt-simple</groupId>
             <artifactId>jopt-simple</artifactId>
             <version>4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.lukehutch</groupId>
+            <artifactId>fast-classpath-scanner</artifactId>
+            <version>2.2.1</version>
         </dependency>
     </dependencies>
 </project>
