--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.real-comp</groupId>
     <artifactId>prime</artifactId>
     <packaging>jar</packaging>
-    <version>0.5.6-SNAPSHOT</version>
+    <version>0.5.6</version>
     <name>prime</name>
     <description>Data transformation tool</description>
     <url>https://github.com/real-comp/prime</url>
@@ -32,7 +31,7 @@
         <connection>scm:git:git@github.com:real-comp/prime.git</connection>
         <developerConnection>scm:git:git@github.com:real-comp/prime.git</developerConnection>
         <url>git@github.com:real-comp/prime.git</url>
-        <tag>HEAD</tag>
+        <tag>prime-0.5.6</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
