--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.real-comp</groupId>
     <artifactId>prime</artifactId>
     <packaging>jar</packaging>
-    <version>0.5.7</version>
+    <version>0.5.8-SNAPSHOT</version>
     <name>prime</name>
     <description>Data transformation tool</description>
     <url>https://github.com/real-comp/prime</url>
@@ -31,7 +31,6 @@
         <connection>scm:git:git@github.com:real-comp/prime.git</connection>
         <developerConnection>scm:git:git@github.com:real-comp/prime.git</developerConnection>
         <url>git@github.com:real-comp/prime.git</url>
-        <tag>prime-0.5.7</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
