--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.real-comp</groupId>
     <artifactId>prime</artifactId>
     <packaging>jar</packaging>
-    <version>0.5.8-SNAPSHOT</version>
+    <version>0.5.8</version>
     <name>prime</name>
     <description>Data transformation tool</description>
     <url>https://github.com/real-comp/prime</url>
@@ -31,7 +31,8 @@
         <connection>scm:git:git@github.com:real-comp/prime.git</connection>
         <developerConnection>scm:git:git@github.com:real-comp/prime.git</developerConnection>
         <url>git@github.com:real-comp/prime.git</url>
-    </scm>
+      <tag>prime-0.5.8</tag>
+  </scm>
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
