--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.real-comp</groupId>
     <artifactId>prime</artifactId>
     <packaging>jar</packaging>
-    <version>0.5.11-SNAPSHOT</version>
+    <version>0.5.10</version>
     <name>prime</name>
     <description>Data transformation tool</description>
     <url>https://github.com/real-comp/prime</url>
